// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Buttons/ino-segment-button Dense smoke-test 1`] = `
<div id="root-inner">
  <div class="story-segment-button">
    <ino-segment-button value
                        class="customizable-segment-btn ino-segment-button hydrated"
                        checked="false"
                        dense="true"
                        disabled="false"
                        name
    >
      <button class="button button--dense"
              name
      >
        Segment Button Label
      </button>
    </ino-segment-button>
  </div>
</div>
`;

exports[`Buttons/ino-segment-button Disabled smoke-test 1`] = `
<div id="root-inner">
  <div class="story-segment-button">
    <ino-segment-button value
                        class="customizable-segment-btn ino-segment-button ino-segment-button--disabled hydrated"
                        checked="false"
                        dense="false"
                        disabled="true"
                        name
    >
      <button class="button"
              disabled
              name
      >
        Segment Button Label
      </button>
    </ino-segment-button>
  </div>
</div>
`;

exports[`Buttons/ino-segment-button EnableChecked smoke-test 1`] = `
<div id="root-inner">
  <div class="story-segment-button">
    <ino-segment-button value
                        class="customizable-segment-btn ino-segment-button hydrated"
                        checked
                        dense="false"
                        disabled="false"
                        name
    >
      <button class="button button--active"
              name
      >
        Segment Button Label
      </button>
    </ino-segment-button>
  </div>
</div>
`;

exports[`Buttons/ino-segment-button Playground smoke-test 1`] = `
<div id="root-inner">
  <div class="story-segment-button">
    <ino-segment-button value
                        class="customizable-segment-btn ino-segment-button hydrated"
                        checked="false"
                        dense="false"
                        disabled="false"
                        name
    >
      <button class="button"
              name
      >
        Segment Button Label
      </button>
    </ino-segment-button>
  </div>
</div>
`;
